--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<custom-control [formGroup]="form" [controls]="jsonControls.controls"></custom-control>
-<button type="submit" >Submit</button>
+<div style="background-color: #8b8b8b;">
+    <dynamicForm [controls]="jsonControls.controls"></dynamicForm>
+</div>
 <!-- <app-dynamic-form></app-dynamic-form> -->
+<!-- <custom-control [formGroup]="form" [controls]="jsonControls.controls"></custom-control>
+<button type="submit" (click)="onSubmit()">Submit</button> -->
